feat: added leaderboard table

--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start:local": "concurrently \"cd ui && yarn start\" \"cd server && yarn start\""
+    "start:local": "concurrently \"cd ui && yarn start\" \"cd server && yarn start\"",
+    "prepare": "husky"
   },
   "dependencies": {},
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@commitlint/config-conventional": "18.4.3",
+    "@commitlint/types": "18.4.3",
+    "concurrently": "^8.2.2",
+    "husky": "^8.0.3"
   }
 }
