--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# MISC
-.DS_Store
-.env
-
 # Dependency directories
 node_modules/
 
@@ -10,4 +6,32 @@ node_modules/
 
 # Yarn 2 - https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
 .pnp.*
+/.pnp
 .yarn/*
+
+.env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+coverage
+dist
+build
+dist-ssr
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
