--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,5 +1,7 @@
 { 
     "singleQuote": true, 
+    "tabWidth": 2,
+    "printWidth": 120,
     "trailingComma": "es5", 
-    "semi": false 
+    "semi": true 
 } 
